--- a/ToDo
+++ b/ToDo
@@ -3,3 +3,6 @@ Make unique the combo of game_name and teacher_name
 Use localstorage and sessions to remove some hidden inputs in html
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
+
+web: gunicorn application:app
+web: gunicorn --worker-class eventlet -w 1 quiz:app
