--- a/ToDo
+++ b/ToDo
@@ -4,5 +4,5 @@ Use localstorage and sessions to remove some hidden inputs in html
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
 
-web: gunicorn application:app
+web: gunicorn quiz:app
 web: gunicorn --worker-class eventlet -w 1 quiz:app
