--- a/ToDo
+++ b/ToDo
@@ -1,21 +1,4 @@
-Delete localstorage and flask sessions upon ending game
-Make unique the combo of game_name and teacher_name
+Allow teacher to delete games and/or questions in a game
 Use localstorage and sessions to remove some hidden inputs in html
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
-
-web: gunicorn quiz:app
-web: gunicorn --worker-class eventlet -w 1 quiz:app
-
-Hey
-
-
-results = {}
-
-print("GAME = {}".format(game.game_name))
-for x in students:
-    print("RESULTS: {}".format(x))
-    results["students_name"] = x.student_name
-    for y in range(len(game.question_list)):
-        results["questions_in_game"].append("NOT ANSWERED")
-    print("RESULTS = {}".format(results))
