--- a/ToDo
+++ b/ToDo
@@ -2,3 +2,5 @@ Allow teacher to delete games and/or questions in a game
 Use localstorage and sessions to remove some hidden inputs in html
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
+
+HEROKU:
