now on to editing games

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,5 @@
 Allow teacher to edit games
+clear students in every game  that teacher has when teacher begins a game
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
 
