--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,4 @@
-Allow teacher to edit games
-clear students in every game  that teacher has when teacher begins a game
+Allow teacher to delete students
 change .env removing FLASK_DEBUG
 Make accessible to screen readers
 Error if end game when no questions are sent
